--- a/iupui.html
+++ b/iupui.html
@@ -1,4 +1,5 @@
-<!DOCTYPE html>
+
+   <!DOCTYPE html>
 <!--Author :Rafal shaikhomar
 		i101
 		fall 2017
@@ -37,26 +38,26 @@
                         <th width="138">Price</th>
                     </tr>
                     <tr>
-                        <td ><a class="book" class="book" href="beginningcakephp.html">Beginning Cake PHP</a></td>
-                        <td>David Golding</td>
+                        <td >Html&CSS</td>
+                        <td>Jon Ducket</td>
                         <td>1430209771</td>
                         <td>$28.99</td>
                     </tr>
                     <tr>
-                        <td class="book"><a style="color:white" href="phpbible.html">PHP Bible, 2nd Edition</a></td>
-                        <td>Tim Converse, Joyce Park </td>
-                        <td>978-0-7645-4955-7</td>
+                        <td class="book"><a style="color:white" href="php.html">JavaScript&Jquery</a></td>
+                        <td>Nick Converse, </td>
+                        <td>9780764549557</td>
                         <td>$24.99</td>
                     </tr>
                     <tr>
-                        <td>PHP and MySQL Web Development</td>
-                        <td>Luke Welling, Laura Thomson</td>
+                        <td>Human interaction</td>
+                        <td>Helen Sharp, Jenny Preece</td>
                         <td>9780672329166</td>
                         <td>$34.64</td>
                     </tr>
                     <tr>
-                        <td>Intermediate Accounting</td>
-                        <td>Donald Kieso</td>
+                        <td>C programing Language , Edition 2</td>
+                        <td>Dennis Ritchie</td>
                         <td>9780470374948</td>
                         <td>$128.99</td>
                     </tr>
